# Primtetrade-Binance-Bot

./: README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/services/: logger.py  trade_service.py
